compiler/tests/success/x86-64/spill_mmx.jazz
export fn main(reg u32 x, reg u32 y) -> reg u32 
{
  #spill_to_mmx reg u32 z;
  stack u32[2] t;
  reg ptr u32[2] p;
  p = t;
  z = 0;
  p[0] = z;
  z += 1;
  p[1] = z;
  () = #spill(p, y, z);
  x = x + y;
  () = #unspill(p, y, z);
  z = p[0];
  x += z;
  z = p[1];
  x += z;
  x = x;
  return x;
}
