compiler/tests/fail/stack_allocation/x86-64/return_ptr_global.jazz
u32[1] g = { 0xabcd };

export fn main() -> reg ptr u32[1] {
  reg ptr u32[1] p = g;
  return p;
}
